<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<EditTextPreference
    android:key="@string/preferences_username_key"
    android:summary="@string/preferences_username_summary"
    android:title="@string/preferences_username_title"></EditTextPreference>

    <EditTextPreference
        android:key="@string/preferences_password_key"
        android:password="true"
        android:summary="@string/preferences_password_summary"
        android:title="@string/preferences_password_title"></EditTextPreference>
    <ListPreference
        android:key="@string/preference_main_bg_key"
        android:summary="@string/preference_main_bg_summary"
        android:title="@string/preference_main_bg_title"
        android:entries="@array/color_names"
        android:entryValues="@array/color_values"></ListPreference>
</PreferenceScreen>