<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_item_view_object_spinner"
        android:textSize="24sp"
        android:layout_gravity="center"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/spinner_object"
        android:entries="@array/color_names"
        android:layout_marginBottom="18dp"
        android:dropDownWidth="match_parent"></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/text_view_object_sender"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/object_spinner_sender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#00ffff"
        android:textSize="16sp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"
        android:background="#a3c9f0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/text_view_object_date"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/object_spinner_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="#00ffff"
        android:textSize="16sp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"
        android:background="#a3c9f0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/text_view_object_message"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/object_spinner_message"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#00ffff"
        android:textSize="16sp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"
        android:background="#a3c9f0"/>


</LinearLayout>