<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textSize="24sp"
        android:layout_gravity="center"
    />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:hint="@string/edit_text_hint"
        android:background="@color/color_edittext_background"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="12dp"
        android:paddingHorizontal="10dp"
        />
    </ScrollView>
<!--    <Button-->
<!--        android:id="@+id/post_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_margin="10dp"-->
<!--        android:padding="10dp"-->
<!--        android:text="@string/button_text"-->
<!--        android:textAllCaps="false"-->

<!--        />-->
    <Button
        android:id="@+id/launch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/blank_page_text"
        android:textAllCaps="false"

        />


</LinearLayout>